# moy-kript

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  WinCryptor.rc  WinCryptor.sln  WinCryptor.vcxproj  animated_progress.cpp  animated_progress.h  anti_debug.cpp  anti_debug.h  av_evasion.cpp  av_evasion.h  build.bat  crypt.cpp  crypt.h  crypt_ext.cpp  crypt_ext.h  cryptor.rc  dark_toggle.cpp  dark_toggle.h  lang.cpp  lang.h  main.cpp  main_window.cpp  main_window.h  moy-kript.sln  pe_ext.cpp  pe_ext.h  plugin_manager.cpp  plugin_manager.h  poly_engine.cpp  poly_engine.h  process_hollowing.cpp  process_hollowing.h  randomized_stub.cpp  randomized_stub.h  report_view.cpp  report_view.h  (+8 more)
.github/: copilot-instructions.md
WinCryptor/: WinCryptor.cpp  WinCryptor.h  WinCryptor.vcxproj  main.cpp
tests/: test_comprehensive  test_comprehensive.cpp  test_enhanced  test_functions  test_functions.cpp  test_stub_generation.cpp
